--- a/client/app/app.less
+++ b/client/app/app.less
@@ -16,6 +16,7 @@
 }
 
 // injector
+@import 'achauth/achauth.less';
 @import 'createoffering/createoffering.less';
 @import 'escrowagreement/escrowagreement.less';
 @import 'kyc/kyc.less';
