routing_number->bank_info

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -17,6 +17,7 @@
 
 // injector
 @import 'achauth/achauth.less';
+@import 'bankinfo/bankinfo.less';
 @import 'createoffering/createoffering.less';
 @import 'escrowagreement/escrowagreement.less';
 @import 'kyc/kyc.less';
