add calculator-payment at route /calculator-payment

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -18,6 +18,7 @@
 // injector
 @import 'achauth/achauth.less';
 @import 'bankinfo/bankinfo.less';
+@import 'calculator-payment/calculator-payment.less';
 @import 'calculator/calculator.less';
 @import 'createoffering/createoffering.less';
 @import 'escrowagreement/escrowagreement.less';
