--- a/client/app/calculator-revenue/calculator-revenue.less
+++ b/client/app/calculator-revenue/calculator-revenue.less
@@ -7,3 +7,12 @@
 th,td {
 	.text-center;
 }
+
+.d3-tip {
+  line-height: 1;
+  font-weight: bold;
+  padding: 12px;
+  background: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  border-radius: 2px;
+}
